--- a/src/app/appointment/components/questions/question-form/question-form.component.html
+++ b/src/app/appointment/components/questions/question-form/question-form.component.html
@@ -7,7 +7,6 @@
         <div fxFlex.lg="70">
           <mat-form-field>
             <input matInput #title formControlName="question" [maxLength]="200" required type="text" [placeholder]="'question.form.question' | translate" autocomplete="off" />
-            <mat-hint align="end">{{ title.value.length }} / {{ title.maxLength }}</mat-hint>
             <mat-error *ngIf="formGroup.hasError('required',['question'])">{{ 'form.validation.required' | translate }}</mat-error>
           </mat-form-field>
         </div>
@@ -32,7 +31,7 @@
       <!-- <button mat-flat-button color="primary">
         {{ 'commom.save' | translate }}
       </button> -->
-      <button type="button" mat-flat-button color="primary" matStepperNext>{{ 'commom.save' | translate }}</button>
+      <button type="button" mat-flat-button color="primary">{{ 'commom.save' | translate }}</button>
     </mat-card-actions>
   </mat-card>
 </form>
