--- a/src/styles.scss
+++ b/src/styles.scss
@@ -116,3 +116,11 @@ mat-sidenav-container {
   min-height: unset !important;
   height: 91vh !important;
 }
+
+app-title {
+
+  button {
+    margin-top: 15px !important;
+  }
+  
+}
