--- a/src/app/survey/components/dynamic-form/dynamic-form.component.html
+++ b/src/app/survey/components/dynamic-form/dynamic-form.component.html
@@ -1,7 +1,6 @@
-<div>
+<div *ngIf="showForm">
     <form (ngSubmit)="onSubmit()" [formGroup]="form">
-
-        <div *ngFor="let question of questions" fxLayout.xs="column" fxLayout.lg="row" fxLayoutAlign="center center" >
+        <div *ngFor="let question of questions" fxLayout.xs="column" fxLayout.lg="row" fxLayoutAlign="center center">
             <app-question fxFlex.lg="94" [question]="question" [form]="form"></app-question>
         </div>
     </form>
