--- a/src/app/survey/components/responsible-step/responsible-step.component.html
+++ b/src/app/survey/components/responsible-step/responsible-step.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="formGroup">
+<div>
   <mat-card>
     <form [formGroup]="formGroup" (submit)="formSubmit()">
       <app-responsible #appResponsible [formGroup]="formGroup" [responsible]="responsible"></app-responsible>
