--- a/src/app/survey/components/generic-step/generic-step.component.html
+++ b/src/app/survey/components/generic-step/generic-step.component.html
@@ -1,7 +1,9 @@
-<mat-card>
-    <app-dynamic-form [questions]="questions$ | async"></app-dynamic-form>
-</mat-card>
-<div class="right-button">
-    <button (click)="viewForm()" type="button" mat-flat-button color="primary"
-        matStepperNext>{{ 'commom.next' | translate }}</button>
+<div>
+    <mat-card>
+        <app-dynamic-form *ngIf="questions" [questions]="questions" [types]="types"></app-dynamic-form>
+    </mat-card>
+    <div class="right-button">
+        <button (click)="viewForm()" type="button" mat-flat-button color="primary"
+            matStepperNext>{{ 'commom.next' | translate }}</button>
+    </div>
 </div>
