--- a/src/app/survey/components/survey-stepper/survey-stepper.component.html
+++ b/src/app/survey/components/survey-stepper/survey-stepper.component.html
@@ -1,16 +1,19 @@
-<app-title icon="library_add_check" title="survey.title"></app-title>
+<div>
+  <app-title icon="library_add_check" title="survey.title"></app-title>
 
-<mat-vertical-stepper [linear]="true" #stepper>
-
-  <mat-step [stepControl]="formGroupResponsible">
-    <ng-template matStepLabel>{{ 'responsible.title' | translate }}</ng-template>
-    <app-responsible-step *ngIf="formGroupResponsible" #responsibleTabs [formGroup]="formGroupResponsible">
-    </app-responsible-step>
-  </mat-step>
-
-  <mat-step *ngFor="let group of groups">
-    <ng-template matStepLabel>{{ group.group }}</ng-template>
-    <app-generic-step [questions]="group.questions"></app-generic-step>
-  </mat-step>
-
-</mat-vertical-stepper>
+  <mat-vertical-stepper [linear]="true" #stepper>
+  
+    <mat-step>
+      <ng-template matStepLabel>{{ 'responsible.title' | translate }}</ng-template>
+      <app-responsible-step>
+      </app-responsible-step>
+    </mat-step>
+  
+    <mat-step *ngFor="let group of groups">
+      <ng-template matStepLabel>{{ group.group }}</ng-template>
+      <app-generic-step [group]="group" [types]="types">
+      </app-generic-step>
+    </mat-step>
+  
+  </mat-vertical-stepper>
+</div>
