--- a/src/app/survey/components/generic-step/generic-step.component.html
+++ b/src/app/survey/components/generic-step/generic-step.component.html
@@ -1,9 +1,16 @@
 <div>
     <mat-card>
-        <app-dynamic-form *ngIf="questions" [questions]="questions" [types]="types"></app-dynamic-form>
+        <app-dynamic-form *ngIf="questions" [onFormValid]="doFormValid" [questions]="questions" [types]="types">
+        </app-dynamic-form>
     </mat-card>
-    <div class="right-button">
-        <button (click)="viewForm()" type="button" mat-flat-button color="primary"
-            matStepperNext>{{ 'commom.next' | translate }}</button>
+    <div *ngIf="group && group.isLastGroup;else finish_button" class="right-button">
+        <button [disabled]="isDisabled" (click)="finishSurvey()" type="button" mat-flat-button
+            color="primary" matStepperNext>{{ 'commom.finish' | translate }}</button>
     </div>
+    <ng-template #finish_button>
+        <div class="right-button">
+            <button [disabled]="isDisabled" (click)="goNextAndSaveForm()" type="button" mat-flat-button color="primary"
+                matStepperNext>{{ 'commom.next' | translate }}</button>
+        </div>
+    </ng-template>
 </div>
