--- a/src/app/survey/components/responsible-step/responsible-step.component.html
+++ b/src/app/survey/components/responsible-step/responsible-step.component.html
@@ -1,6 +1,6 @@
 <div>
   <mat-card>
-    <form [formGroup]="formGroup" (submit)="formSubmit()">
+    <form [formGroup]="formGroup">
       <app-responsible #appResponsible [formGroup]="formGroup" [responsible]="responsible"></app-responsible>
       <app-patient #appPatient [formGroup]="formGroup" [patients]="patients">
       </app-patient>
@@ -8,6 +8,6 @@
     </form>
   </mat-card>
   <div class="right-button">
-    <button [disabled]="formGroup.invalid" (click)="goNextAndSaveForm()" type="button" mat-flat-button color="primary" matStepperNext>{{ 'commom.next' | translate }}</button>
+    <button [disabled]="formGroup.invalid" (click)="onFormSubmit()" type="button" mat-flat-button color="primary" matStepperNext>{{ 'commom.next' | translate }}</button>
   </div>
 </div>
