Update final step to show a loader, change css and create finish survey step

--- a/src/app/survey/components/survey/survey.component.html
+++ b/src/app/survey/components/survey/survey.component.html
@@ -1,3 +1,6 @@
 <div class="container">
   <router-outlet></router-outlet>
+  <div class="survey-footer">
+    <mat-progress-bar *ngIf="showProgressBar" mode="indeterminate"></mat-progress-bar>
+  </div>
 </div>
