--- a/src/styles.scss
+++ b/src/styles.scss
@@ -124,3 +124,11 @@ app-title {
   }
   
 }
+
+.mat-radio-inner-circle {
+  background-color: #3f51b5 !important;
+}
+
+.mat-radio-outer-circle {
+  border-color: #3f51b5 !important;
+}
