--- a/src/app/appointment/components/questions/question-list/question-list.component.html
+++ b/src/app/appointment/components/questions/question-list/question-list.component.html
@@ -1,5 +1,5 @@
 <app-title icon="format_list_bulleted" title="{{ group.group }}">
-  <button mat-flat-button [routerLink]="['/', 'appointment', 'groups']">
+  <button mat-flat-button [routerLink]="['/', 'management', 'groups']">
     {{ 'commom.back' | translate }}
   </button>
 
