--- a/src/app/appointment/components/group/group-form/group-form.component.html
+++ b/src/app/appointment/components/group/group-form/group-form.component.html
@@ -21,7 +21,7 @@
     </mat-card-content>
 
     <mat-card-actions class="btn-actions" align="end">
-      <button type="button" mat-flat-button [routerLink]="['/','appointment','groups']">
+      <button type="button" mat-flat-button [routerLink]="['/','management','groups']">
         {{ 'commom.back' | translate }}
       </button>
 
