--- a/src/app/appointment/components/questions/question-form/question-form.component.html
+++ b/src/app/appointment/components/questions/question-form/question-form.component.html
@@ -50,7 +50,7 @@
   </mat-card-content>
 
   <mat-card-actions class="btn-actions" align="end">
-    <button type="button" mat-flat-button [routerLink]="['/','appointment','groups', group?.id, 'questions']">
+    <button type="button" mat-flat-button [routerLink]="['/','management','groups', group?.id, 'questions']">
       {{ 'commom.back' | translate }}
     </button>
 
