query appointment search screen

--- a/src/app/appointment/components/appointment/query/appointment-query.component.html
+++ b/src/app/appointment/components/appointment/query/appointment-query.component.html
@@ -1,4 +1,7 @@
 <app-title icon="poll" title="appointment.list.title">
-    <button mat-flat-button color="primary"
-        [routerLink]="['../new']">{{ 'app_title.new' | translate }}</button>
+    <button mat-flat-button color="primary" [routerLink]="['../new']">{{ 'app_title.new' | translate }}</button>
 </app-title>
+
+<app-appointment-query-search [onSearch]="doSearch">
+
+</app-appointment-query-search>
