--- a/src/app/appointment/components/appointment/query/appointment-query.component.html
+++ b/src/app/appointment/components/appointment/query/appointment-query.component.html
@@ -1,7 +1,7 @@
-<app-title icon="poll" title="appointment.list.title">
-    <button mat-flat-button color="primary" [routerLink]="['../new']">{{ 'app_title.new' | translate }}</button>
-</app-title>
+<div>
+    {{appointments | json}}
+</div>
 
-<app-appointment-query-search [onSearch]="doSearch">
-
-</app-appointment-query-search>
+<div *ngIf="showProgressBar" class="query-footer">
+    <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+</div>
