--- a/src/app/appointment/components/appointment/query/appointment-query.component.scss
+++ b/src/app/appointment/components/appointment/query/appointment-query.component.scss
@@ -3,3 +3,10 @@ form {
         width: 90% !important;
     }
 }
+
+.query-footer{
+    position: fixed;
+    bottom: 10px;
+    left: 0;
+    right: 0;
+}
