--- a/src/app/appointment/components/appointment/create/appointment-create.component.html
+++ b/src/app/appointment/components/appointment/create/appointment-create.component.html
@@ -1,4 +1,4 @@
 <app-title icon="poll" title="appointment.form.new">
     <button mat-flat-button color="primary"
-    [routerLink]="['../']">{{ 'commom.back' | translate }}</button>
+    [routerLink]="['../../']">{{ 'commom.back' | translate }}</button>
 </app-title>
