--- a/src/app/appointment/components/appointment/detail/appointment-detail.component.html
+++ b/src/app/appointment/components/appointment/detail/appointment-detail.component.html
@@ -1,4 +1,3 @@
-<app-title icon="poll" title="appointment.form.detail">
-    <button mat-flat-button color="primary"
-    [routerLink]="['../']">{{ 'commom.back' | translate }}</button>
-</app-title>
+<div>
+    Ola detail
+</div>
