--- a/src/styles.scss
+++ b/src/styles.scss
@@ -142,3 +142,7 @@ app-title {
     margin-left: 0px !important;
   }
 }
+
+.mat-accent .mat-slider-thumb, .mat-accent .mat-slider-thumb-label, .mat-accent .mat-slider-track-fill {
+  background-color: #3f51b5 !important;
+}
