--- a/src/app/appointment/components/appointment/create/appointment-create.component.html
+++ b/src/app/appointment/components/appointment/create/appointment-create.component.html
@@ -15,7 +15,7 @@
     </app-appointment-create-scale>
 
     <div class="right-button">
-        <button [disabled]="appointmentForm.invalid" (click)="show()" type="button" mat-flat-button color="primary">
+        <button [disabled]="appointmentForm.invalid" (click)="create()" type="button" mat-flat-button color="primary">
             {{ 'commom.save' | translate }}
         </button>
     </div>
