--- a/src/app/appointment/components/appointment/query/appointment-query.component.html
+++ b/src/app/appointment/components/appointment/query/appointment-query.component.html
@@ -1,13 +1,23 @@
-<mat-card *ngFor="let appointment of appointments">
-    <mat-card-header>
-        <mat-card-title>{{appointment.description}}</mat-card-title>
-        <mat-card-subtitle>Date {{ appointment.date | date:'shortTime' }}</mat-card-subtitle>
-    </mat-card-header>
-    <!-- {{appointments | json}} -->
-    <mat-card-actions>
-        <button class="button-card-float" mat-button>Detail</button>
-    </mat-card-actions>
-</mat-card>
+<div fxLayout="row" fxLayout.xs="column" fxLayout.sm="column">
+
+    <mat-card 
+        fxFlex="0 1 calc(33.3%)"
+        *ngFor="let appointment of appointments">
+        <mat-card-header>
+            <mat-card-title>{{appointment.description}}</mat-card-title>
+            <mat-card-subtitle>Date {{ appointment.date | date:'shortTime' }}</mat-card-subtitle>
+        </mat-card-header>
+        <mat-card-actions>
+            <button class="button-card-float" mat-button>Detail</button>
+        </mat-card-actions>
+    </mat-card>
+
+</div>
+
+<div *ngIf="appointments && appointments.length === 0">
+    <p>No appointments found for this patient.</p>
+</div>
+
 
 <div *ngIf="showProgressBar" class="query-footer">
     <mat-progress-bar mode="indeterminate"></mat-progress-bar>
