--- a/src/styles.scss
+++ b/src/styles.scss
@@ -58,6 +58,10 @@ mat-form-field {
   margin-top: 15px;
 }
 
+mat-expansion-panel {
+  border-radius: 10px !important;
+}
+
 .mat-card {
   border-radius: 20px !important;
   border: 1px solid #c1c1c191 !important;
@@ -145,4 +149,11 @@ app-title {
 
 .mat-accent .mat-slider-thumb, .mat-accent .mat-slider-thumb-label, .mat-accent .mat-slider-track-fill {
   background-color: #3f51b5 !important;
+}
+
+.query-footer{
+  position: fixed;
+  bottom: 10px;
+  left: 0;
+  right: 0;
 }
