--- a/src/app/survey/components/survey-stepper/survey-stepper.component.html
+++ b/src/app/survey/components/survey-stepper/survey-stepper.component.html
@@ -1,5 +1,7 @@
 <div>
-  <app-title icon="library_add_check" title="survey.title"></app-title>
+  <app-title icon="library_add_check" title="survey.title">
+    <img class="logo" [src]="logo?.logo" alt="logo">
+  </app-title>
 
   <mat-vertical-stepper [linear]="true" #stepper>
   
