--- a/src/styles.scss
+++ b/src/styles.scss
@@ -87,6 +87,12 @@ mat-step-header {
   }
 }
 
+.logo {
+  width: 130px;
+  border-radius: 10px;
+  padding-left: 10px;
+}
+
 // form
 form {
   .form-stepper {
