--- a/src/app/appointment/components/appointment/query/appointment-query.component.html
+++ b/src/app/appointment/components/appointment/query/appointment-query.component.html
@@ -1,6 +1,7 @@
 <div fxLayout="row wrap" fxLayout.xs="column" fxLayout.sm="column">
 
     <mat-card 
+        fxFlex.xl="calc(33%-20px)"
         fxFlex.lg="calc(33%-20px)"
         fxFlex.md="calc(50%-20px)"
         *ngFor="let appointment of appointments">
