--- a/src/app/survey/components/survey-stepper/survey-stepper.component.html
+++ b/src/app/survey/components/survey-stepper/survey-stepper.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="background">
   <app-title icon="library_add_check" title="survey.title">
     <img class="logo" [src]="logo?.logo" alt="logo">
   </app-title>
