--- a/src/app/survey/components/survey-stepper/survey-stepper.component.scss
+++ b/src/app/survey/components/survey-stepper/survey-stepper.component.scss
@@ -6,3 +6,10 @@
   margin-top: 16px;
 }
 
+mat-vertical-stepper {
+  background-image: url(https://i.pinimg.com/originals/a7/33/b2/a733b2052060a50a22d3ce43ddc96e4e.jpg);
+}
+
+.mat-step-label.mat-step-label-active.mat-step-label-selected{
+  color: black !important;
+}
